plugins {
	id 'java'
}

repositories {
	mavenLocal()
	maven {
		url = 'https://repo.runelite.net'
		content {
			includeGroupByRegex("net\\.runelite.*")
		}
	}
	mavenCentral()
}

def runeLiteVersion = '1.12.+'
def pluginMainClass = 'rs117.hd.HdPluginTest'

dependencies {
	compileOnly group: 'net.runelite', name: 'client', version: runeLiteVersion

	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	testImplementation 'junit:junit:4.13.2'
	testImplementation 'org.mockito:mockito-core:3.1.0'
	testImplementation group: 'net.runelite', name: 'client', version: runeLiteVersion
	testImplementation group: 'net.runelite', name: 'jshell', version: runeLiteVersion

	testCompileOnly 'org.projectlombok:lombok:1.18.30'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'
}

group = 'rs117.hd'
version = '1.5.2'

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release.set(11)
}

tasks.register('run', JavaExec) {
	classpath = sourceSets.test.runtimeClasspath
	mainClass = pluginMainClass

	jvmArgs "-ea", "-Xmx768M", "--add-opens=java.desktop/com.apple.eawt=ALL-UNNAMED"
	args "--developer-mode", "--debug", "--disable-telemetry"
}

tasks.register('shadowJar', Jar) {
	dependsOn configurations.testRuntimeClasspath
	manifest {
		attributes('Main-Class': pluginMainClass, 'Multi-Release': true)
	}

	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
	from sourceSets.main.output
	from sourceSets.test.output
	from {
		configurations.testRuntimeClasspath.collect { file ->
			file.isDirectory() ? file : zipTree(file)
		}
	}

	exclude 'META-INF/INDEX.LIST'
	exclude 'META-INF/*.SF'
	exclude 'META-INF/*.DSA'
	exclude 'META-INF/*.RSA'
	exclude '**/module-info.class'

	group = BasePlugin.BUILD_GROUP
	archiveClassifier.set('shadow')
	archiveFileName.set("${rootProject.name}-${project.version}-all.jar")
}

tasks.register('generateBuildInfo') {
	def outputDir = layout.buildDirectory.dir("generated/sources/${name}/main").get()
	outputs.dir outputDir

	def runCmd = { String cmd ->
		try {
			def stdout = new ByteArrayOutputStream()
			def result = exec { commandLine cmd.split(); standardOutput = stdout; ignoreExitValue = true }
			[out: stdout.toString().trim() ?: null, exit: result.exitValue]
		} catch (Exception ignored) {
			[out: null, exit: -1]
		}
	}

	doLast {
		def commit = runCmd('git rev-parse HEAD').out ?: "unknown commit"
		def isModified = runCmd('git diff --quiet HEAD').exit != 0
		if (isModified)
			commit += "*";

		def path = outputDir.file("rs117/hd/BuildInfo.java").asFile
		path.parentFile.mkdirs()
		path.text = """
			package rs117.hd;

			public class BuildInfo {
			    public static final String VERSION = "${version}";
			    public static final Long TIMESTAMP = ${System.currentTimeMillis()}L;
			    public static final String COMMIT = "${commit}";
			}
		""".stripIndent().trim()
	}
}
sourceSets.main.java.srcDir(generateBuildInfo)
compileJava.dependsOn(generateBuildInfo)
